Fixed Hi Message overflowing window

--- a/src/components/hi/hi.css
+++ b/src/components/hi/hi.css
@@ -1,6 +1,5 @@
 .hi-container {
   position: relative;
-  margin-top: 5px;
   opacity: 0;
   backdrop-filter: blur(20px);
   animation: fade-in 2s ease 1 forwards;
@@ -27,8 +26,6 @@
 }
 
 h1 {
-  display: flex;
-  flex-direction: column;
   text-transform: uppercase;
   font-weight: 900;
   letter-spacing: 2px;
@@ -38,7 +35,9 @@ h1 {
   color: white;
   padding: 0rem clamp(1rem, 2vw, 3rem);
   overflow: hidden;
-  white-space: nowrap;
+  width: 100vw;
+  overflow-wrap: break-word;
+  text-align: center;
 }
 
 .glowing-button {
